samples/_failures_safe/1761088396_eadc2d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_76fdaca0.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_76fdaca0.c:183:70: error: expected ‘;’ at end of input
  183 |                 graph->edges[i]->target->distance = current->distance
      |                                                                      ^
      |                                                                      ;
./samples/SAFE/__tmp_76fdaca0.c:183:17: error: expected declaration or statement at end of input
  183 |                 graph->edges[i]->target->distance = current->distance
      |                 ^~~~~
./samples/SAFE/__tmp_76fdaca0.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76fdaca0.c:183:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_76fdaca0.c:183:17: error: expected declaration or statement at end of input
